# text2docx

./: LICENSE  README.md  setup.cfg  text2docx.py
