[bdist_wheel]
universal = 1

[metadata]
name = text2docx
version = attr: text2docx.__version__
description = text typesetter
long_description = file:README.md
license = MIT
author = shidocchi
author_email = shidocchi@gmail.com
url = https://github.com/shidocchi/text2docx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
py_modules = text2docx
install_requires =
  python-docx
